# AkulaControl

./: .gitignore  .gitmodules  CHANGELOG.MD  README.md
AkulaPackageROS2/: .gitignore  CMakeLists.txt  README.md  package.xml
AkulaPackageROS2/config/: imu.yaml
AkulaPackageROS2/launch/: Main.launch.py
AkulaPackageROS2/model/: akula.urdf  akula_general.xacro
AkulaPackageROS2/model/meshes/: frame.stl  wheel_10_in.stl
AkulaPackageROS2/model/utils/: colors.urdf.xacro
AkulaPackageROS2/msg/: Encoders.msg
AkulaPackageROS2/src/: AkulaEncoderNode.cpp  AkulaImuNode.cpp  AkulaMainNode.cpp  SerialConnector.cpp
AndroidApp/: README.md  settings.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/androidTest/java/com/example/akulatest/: ExampleInstrumentedTest.kt
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/example/akulatest/: ConnIndicator.kt  Joystick.kt  MainActivity.kt  SlidePanel.kt
AndroidApp/app/src/main/java/com/example/androidapp/: Client.java  ConnIndicator.java  Header.java  Joystick.java  MainActivity.java  NetworkThread.java  SlidePanel.java
AndroidApp/app/src/main/res/drawable/: open_menu_button.xml  request_button.xml
AndroidApp/app/src/main/res/layout/: activity_main.xml
AndroidApp/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
AndroidApp/app/src/main/res/values-night/: themes.xml
AndroidApp/app/src/test/java/com/example/akulatest/: ExampleUnitTest.kt
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
DesktopServer/: CMakeLists.txt  MotorPWM.cpp  MotorPWM.h  README.md  SerialConnector.cpp  SerialConnector.h  SerialMonitor.cpp  SerialMonitor.h  Server.cpp  Server.h  main.cpp
DesktopServer/config/: control.yaml
Encoders/: CMakeLists.txt  Encoders.ioc
Encoders/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
FeatureExamples/: README.md
FeatureExamples/Encoders/: CMakeLists.txt  Encoders.ioc  README.md  main.c
FeatureExamples/Encoders/Core/Src/: main.c  stm32f4xx_hal_msp.c
FeatureExamples/JavaClient/: Header.java
FeatureExamples/JavaClient/src/: Main.java
FeatureExamples/Motors/: CMakeLists.txt  Motors.ioc  README.md  main.c
FeatureExamples/Motors/Core/Src/: main.c  stm32f4xx_hal_msp.c
FeatureExamples/SerialConnector/: SerialConnector.h  SerialMonitor.cpp
FeatureExamples/SpiImu/: CMakeLists.txt  README.md  SpiImu.ioc  main.c
FeatureExamples/SpiImu/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
FeatureExamples/SpiImu/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
JavaClient/src/: Client.java  Main.java
Motors/: Motors.ioc
STM32/: .cproject  .gitignore  .mxproject  CMakeLists.txt  README.md  STM32 Debug.launch  STM32.ioc
STM32/Akula/: Akula.c  Akula.h
STM32/Core/Inc/: main.h
STM32/Core/Src/: main.c  stm32f4xx_hal_msp.c
STM32/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f407xx.h
STM32/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_exti.h  stm32f4xx_hal_pwr.h
STM32/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
SensorSTM32/: CMakeLists.txt  SensorSTM32.ioc
SensorSTM32/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
SensorSTM32/Core/Src/: main.c  stm32f4xx_it.c
SerialConnector/: CMakeLists.txt  SerialConnector.cpp  SerialConnector.h  SerialMonitor.cpp  SerialMonitor.h  main.cpp
Systemd/: AkulaSensorsLauncher.sh  AkulaSensorsRecord.sh  README.md  akula_sensors.service  akula_sensors_launcher.service  akula_sensors_record.service
